# emfir

./: Cargo.toml  README.md
crates/eer/: Cargo.toml
crates/eer/src/: lib.rs
crates/emfir-cli/: Cargo.toml
crates/emfir-cli/src/: main.rs
crates/mrc/: Cargo.toml
crates/mrc/src/: error.rs  lib.rs
