[package]
name = "mrc"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4"  # For reading binary data
thiserror = "1.0"  # For error handling
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization
serde_json = "1.0"  # For JSON serialization
image = "0.24"  # For image processing and PNG output
